Go back link style

--- a/src/components/PokemonDetails/PokemonDetails.scss
+++ b/src/components/PokemonDetails/PokemonDetails.scss
@@ -19,5 +19,14 @@
                 padding-right: 5px;
             }
         }
+        .go-back{
+            background: grey;
+            color: white;
+            padding: 10px 50px;
+            margin: 50px;
+            display: block;
+            max-width: 100px;
+            margin: 20px auto;
+        }
     }
 }
