--- a/src/components/PokemonItem/PokemonItem.scss
+++ b/src/components/PokemonItem/PokemonItem.scss
@@ -1,15 +1,22 @@
 .item{
-    width: 47%;
+    width: 23%;
     margin-left: 10px;
     float: left;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     border: 1px solid #80808059;
     padding: 10px;
     margin-bottom: 10px;
+    flex-direction: column;
+    -webkit-transition:all 500ms ease-in-out;
+    transition:all 500ms ease-in-out;
+    -ms-transform:all 500ms ease-in-out;
     &:hover{
+        -webkit-transform:scale(1.05);
         cursor: pointer;
+        border: 1px solid grey;
+        background: #80808014;
     }
     
     img{
@@ -17,5 +24,11 @@
         margin-right: 10px;
         height: 100%;
         width: auto;
+    }
+
+    h2{
+        font-size: 18px;
+        margin-top: 0;
+        text-transform: capitalize;
     }
 }
