--- a/src/components/PokemonsList/PokemonsList.scss
+++ b/src/components/PokemonsList/PokemonsList.scss
@@ -1,25 +1,10 @@
 .content-wrapper{
+    img{
+        max-height: 170px;
+        margin: 25px 0;
+    }
     .items-wrapper{
         width: 70%;
         margin: 0 auto;
-    }
-    ul{
-        display: flex;
-        justify-content: space-between;
-        padding: 20px 25%;
-        max-width: 50%;
-        margin: 0 auto;
-        background: grey;
-        color: white;
-        li{
-            display: inline-block;
-            padding: 3px 10px;
-            border: 1px solid grey;
-            &:hover, &.selected {
-                cursor: pointer;
-                font-weight: 600;
-                border: 1px solid #ffffff78;
-            }
-        }
     }
 }
